fix(ui): ensure TradingView chart is fully visible above footer

--- a/src/pages/chart/chart.scss
+++ b/src/pages/chart/chart.scss
@@ -4,11 +4,13 @@
     &__chart-container {
         position: relative;
         top: 0;
+        height: 100%;
 
         &-wrapper {
             position: absolute;
             top: 0;
             width: 100vw;
+            height: 100%;
             background-color: var(--general-main-1);
         }
     }
